--- a/_episodes_rmd/07-inference-ci.Rmd
+++ b/_episodes_rmd/07-inference-ci.Rmd
@@ -65,36 +65,31 @@ Then we will return to the group difference after we've learned how to build
 confidence intervals in the simple case.
 We start by reading in the data and selecting the appropriate rows:
 
-```{r,echo=FALSE}
-library(downloader)
-url <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/mice_pheno.csv"
-filename <- "mice_pheno.csv"
-if (!file.exists(filename)) download(url,destfile=filename)
+```{r chowPop}
+chowPopulation <- pheno %>% 
+  filter(Sex=="F" & Diet=="chow") %>% 
+  select(Bodyweight) %>% 
+  unlist
 ```
 
-```{r}
-dat <- read.csv("mice_pheno.csv")
-chowPopulation <- dat[dat$Sex=="F" & dat$Diet=="chow",3]
-```
+The population average <i>&mu;<sub>X</sub></i> is our parameter of interest here:
 
-The population average $\mu_X$ is our parameter of interest here:
-
-```{r}
+```{r muChow}
 mu_chow <- mean(chowPopulation)
 print(mu_chow)
 ```
 
 We are interested in estimating this parameter. In practice, we do not get to see the entire population so, as we did for p-values, we demonstrate how we can use samples to do this. Let's start with a sample of size 30:
 
-```{r}
+```{r sampleChow}
 N <- 30
-chow <- sample(chowPopulation,N)
+chow <- sample(chowPopulation, N)
 print(mean(chow))
 ```
 
 We know this is a random variable, so the sample average will not be a perfect estimate. In fact, because in this illustrative example we know the value of the parameter, we can see that they are not exactly the same. A confidence interval is a statistical way of reporting our finding, the sample average, in a way that explicitly summarizes the variability of our random variable.
 
-With a sample size of 30, we will use the CLT. The CLT tells us that $\bar{X}$ or `mean(chow)` follows a normal distribution with mean $\mu_X$ or `mean(chowPopulation)` and standard error approximately  $s_X/\sqrt{N}$ or:
+With a sample size of 30, we will use the CLT. The CLT tells us that <i>X&#772;</i> or `mean(chow)` follows a normal distribution with mean <i>&mu;<sub>X</sub></i> or `mean(chowPopulation)` and standard error approximately  <i>s<sub>X</sub> /  &radic;N</i> or:
 
 ```{r}
 se <- sd(chow)/sqrt(N)
@@ -111,48 +106,44 @@ are estimating. Keep in mind that saying 95% of random intervals will fall on th
 true value (our definition above) is *not the same* as saying there is
 a 95% chance that the true value falls in our interval. 
 To construct it, we note that the CLT tells us that 
-$\sqrt{N} (\bar{X}-\mu_X) / s_X$ follows a normal distribution with mean 0 and
+<i>&radic;N (X&#772;-<i>&mu;<sub>X</sub></i>) / s<sub>X</sub></i> follows a normal distribution with mean 0 and
 SD 1. This implies that the probability of this event:
 
-$$
--2 \leq \sqrt{N} (\bar{X}-\mu_X)/s_X \leq 2
-$$  
+![](../fig/02-confint.png)
 
 which written in R code is:
 
-```{r}
+```{r conf_int}
 pnorm(2) - pnorm(-2)
 ```
 
-...is about 95% (to get closer use `qnorm(1-0.05/2)` instead of
+...is about 95% (to get closer use `qnorm(1 - 0.05/2)` instead of
 2). Now do some basic algebra to clear out everything and leave
-$\mu_X$ alone in the middle and you get that the following event: 
+<i>&mu;<sub>X</sub></i> alone in the middle and you get that the following event: 
 
-$$
-\bar{X}-2 s_X/\sqrt{N} \leq \mu_X \leq \bar{X}+2s_X/\sqrt{N}
-$$  
-
+![](../fig/02-event-confint.png)
+ 
 has a probability of 95%. 
 
 Be aware that it is the edges of the interval 
-$\bar{X} \pm 2 s_X / \sqrt{N}$, not $\mu_X$, 
+<i>X&#772;- &plusmn; 2 s<sub>X</sub> / &radic;N</i>, not <i>&mu;<sub>X</sub></i>, 
 that are random. Again, the definition of
 the confidence interval is that 95% of *random intervals* will contain
-the true, fixed value $\mu_X$. For a specific interval that has been
+the true, fixed value <i>&mu;<sub>X</sub></i>. For a specific interval that has been
 calculated, the probability is either 0 or 1 that it contains the
-fixed population mean $\mu_X$.
+fixed population mean <i>&mu;<sub>X</sub></i>.
 
 Let's demonstrate this logic through simulation. We can construct this
 interval with R relatively easily: 
 
-```{r}
-Q <- qnorm(1- 0.05/2)
+```{r const_conf_int}
+Q <- qnorm(1 - 0.05/2)
 interval <- c(mean(chow)-Q*se, mean(chow)+Q*se )
 interval
 interval[1] < mu_chow & interval[2] > mu_chow
 ```
 
-which happens to cover $\mu_X$ or `mean(chowPopulation)`. However, we can take another sample and we might not be as lucky. In fact, the theory tells us that we will cover $\mu_X$ 95% of the time. Because we have access to the population data, we can confirm this by taking several new samples:
+which happens to cover <i>&mu;<sub>X</sub></i> or `mean(chowPopulation)`. However, we can take another sample and we might not be as lucky. In fact, the theory tells us that we will cover <i>&mu;<sub>X</sub></i> 95% of the time. Because we have access to the population data, we can confirm this by taking several new samples:
 
 ```{r confidence_interval_n30,fig.cap="We show 250 random realizations of 95% confidence intervals. The color denotes if the interval fell on the parameter or not.",fig.height=8}
 library(rafalib)
@@ -172,13 +163,13 @@ for (i in 1:B) {
 }
 ```
 
-You can run this repeatedly to see what happens. You will see that in about 5% of the cases, we fail to cover $\mu_X$.
+You can run this repeatedly to see what happens. You will see that in about 5% of the cases, we fail to cover <i>&mu;<sub>X</sub></i>.
 
 <a name="smallsample"></a>
 
 #### Small Sample Size and the CLT
 
-For $N=30$, the CLT works very well. However, if $N=5$, do these confidence intervals work as well? We used the CLT to create our intervals, and with $N=5$ it may not be as useful an approximation. We can confirm this with a simulation:
+For *N=30*, the CLT works very well. However, if *N=5*, do these confidence intervals work as well? We used the CLT to create our intervals, and with *N=5* it may not be as useful an approximation. We can confirm this with a simulation:
 
 
 ```{r confidence_interval_n5,fig.cap="We show 250 random realizations of 95% confidence intervals, but now for a smaller sample size. The confidence interval is based on the CLT approximation. The color denotes if the interval fell on the parameter or not.",fig.height=8}
@@ -198,12 +189,12 @@ for (i in 1:B) {
 }
 ```
 
-Despite the intervals being larger (we are dividing by $\sqrt{5}$
-instead of $\sqrt{30}$ ), we see many more intervals not covering
-$\mu_X$. This is because the CLT is incorrectly telling us that the
+Despite the intervals being larger (we are dividing by <i>&radic;5</i>
+instead of <i>&radic;30</i> ), we see many more intervals not covering
+<i>&mu;<sub>X</sub></i>. This is because the CLT is incorrectly telling us that the
 distribution of the `mean(chow)` is approximately normal with standard deviation 1 when, in fact,
 it has a larger standard deviation and a fatter tail (the parts of the distribution going to
-$\pm \infty$). This mistake affects us in the calculation of `Q`, which assumes a normal distribution and uses `qnorm`. The t-distribution might be more appropriate. All we have to do is re-run the above, but change how we calculate `Q` to use `qt` instead of `qnorm`.
+<i>&plusmn; &infin;</i>). This mistake affects us in the calculation of `Q`, which assumes a normal distribution and uses `qnorm`. The t-distribution might be more appropriate. All we have to do is re-run the above, but change how we calculate `Q` to use `qt` instead of `qnorm`.
 
 ```{r confidence_interval_tdist_n5,fig.cap="We show 250 random realizations of 95% confidence intervals, but now for a smaller sample size. The confidence is now based on the t-distribution approximation. The color denotes if the interval fell on the parameter or not.",fig.height=8}
 mypar()
@@ -235,53 +226,45 @@ is bigger than...
 qnorm(1- 0.05/2)
 ```
 
-...which makes the intervals larger and hence cover $\mu_X$ more frequently; in fact, about 95% of the time.
+...which makes the intervals larger and hence cover <i>&mu;<sub>X</sub></i> more frequently; in fact, about 95% of the time.
 
 #### Connection Between Confidence Intervals and p-values
 
 We recommend that in practice confidence intervals be reported instead of p-values. If for some reason you are required to provide p-values, or required that your results are significant at the 0.05 of 0.01 levels, confidence intervals do provide this information. 
 
 If we are talking about a t-test p-value, we are asking if 
-differences as extreme as the one we observe, $\bar{Y} - \bar{X}$, are likely when the difference between the population averages is actually equal to
+differences as extreme as the one we observe, <i>Y&#772; - X&#772;</i>, are likely when the difference between the population averages is actually equal to
 zero. So we can form a confidence interval with the observed 
-difference. Instead of writing $\bar{Y} - \bar{X}$ repeatedly, let's
+difference. Instead of writing <i>Y&#772; - X&#772;</i> repeatedly, let's
 define this difference as a new variable 
-$d \equiv \bar{Y} - \bar{X}$ . 
+<i>d &equiv; Y&#772; - X&#772;</i>. 
 
-Suppose you use CLT and report $d \pm 2 s_d/\sqrt{N}$, with $s_d = \sqrt{s_X^2+s_Y^2}$, as a
+Suppose you use CLT and report <i>d &plusmn; 2 s<sub>d</sub> / &radic;N</i>, with <i>s<sub>d</sub> = &radic;{s<sub>X</sub>^2 + s<sub>Y</sub>^2}</i>, as a
 95% confidence interval for the difference and this interval does not
 include 0 (a false positive).
 Because the interval does not include 0, this implies that either
-$D - 2 s_d/\sqrt{N}  > 0$ or $d + 2 s_d/\sqrt{N} < 0$.
+<i>D - 2 s<sub>d</sub> / &radic;N  > 0</i> or <i>d + 2 s<sub>d</sub>/&radic;N < 0</i>.
 This suggests that either
-$\sqrt{N}d/s_d > 2$ or $\sqrt{N}d/s_d < 2$.  This
+<i>&radic;Nd/s<sub>d</sub> > 2</i> or <i>&radic;Nd/s<sub>d</sub> < 2</i>.  This
 then implies that the t-statistic is more extreme than 2, which in
 turn suggests that the p-value must be smaller than 0.05
 (approximately, for a more exact calculation use `qnorm(.05/2)` instead of 2).
 The same calculation can be made if we use the t-distribution instead of
-CLT (with `qt(.05/2, df=2*N-2)`).
+CLT (with `qt(.05/2, df = 2 * N-2)`).
 In summary, if a 95% or 99% confidence interval does not include
 0, then the p-value must be smaller than 0.05 or 0.01 respectively. 
 
-Note that the confidence interval for the difference $d$ is provided by the `t.test` function:
+Note that the confidence interval for the difference *d* is provided by the `t.test` function:
 
-```{r,echo=FALSE}
-library(downloader)
-url <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/femaleMiceWeights.csv"
-filename <- "femaleMiceWeights.csv"
-if (!file.exists(filename)) download(url,destfile=filename)
-```
-
-```{r,echo=FALSE}
-dat <- read.csv("femaleMiceWeights.csv")
-controlIndex <- which(dat$Diet=="chow")
-treatmentIndex <- which(dat$Diet=="hf")
-control <- dat[controlIndex,2]
-treatment <- dat[treatmentIndex,2]
+```{r control_v_treatment,echo=FALSE}
+controlIndex <- which(pheno$Diet=="chow")
+treatmentIndex <- which(pheno$Diet=="hf")
+control <- pheno[controlIndex, 3]
+treatment <- pheno[treatmentIndex, 3]
 ```
 
 ```{r}
-t.test(treatment,control)$conf.int
+t.test(treatment, control)$conf.int
 ```
 
 In this case, the 95% confidence interval does include 0 and we observe that the p-value is larger than 0.05 as predicted. If we change this to a 90% confidence interval, then:
