--- a/_episodes_rmd/07-inference-ci.Rmd
+++ b/_episodes_rmd/07-inference-ci.Rmd
@@ -27,6 +27,7 @@ source("../bin/chunk-options.R")
 knitr_fig_path("07-")
 library(UsingR)
 library(tidyverse)
+pheno <- read.csv(file = "../data/mice_pheno.csv")
 ```
 
 ```{r,results=FALSE,echo=FALSE}
