--- a/_episodes_rmd/07-inference-ci.Rmd
+++ b/_episodes_rmd/07-inference-ci.Rmd
@@ -3,14 +3,8 @@ title: "Confidence Intervals"
 teaching: 0
 exercises: 0
 questions:
-- "what is a confidence interval?"
-- "?"
-- "?"
+- "What is a confidence interval?"
 objectives:
-- ""
-- ""
-- ""
-- ""
 - ""
 - ""
 - ""
