--- a/_episodes_rmd/12-eda-intro.Rmd
+++ b/_episodes_rmd/12-eda-intro.Rmd
@@ -67,7 +67,7 @@ We can compute the percentiles for our list of heights:
 
 ```{r definingHeights, message=FALSE}
 library(rafalib)
-data(father.son,package="UsingR") ##available from CRAN
+father.son <- UsingR::father.son
 x <- father.son$fheight
 ```
 
@@ -136,7 +136,7 @@ good approximation for the direct compensation for 199 United States
 CEOs in the year 2000.
 
 ```{r execpay, fig.width=10.5, fig.height=5.25, fig.cap="Histogram and QQ-plot of executive pay."}
-data(exec.pay,package="UsingR")
+exec.pay <- UsingR::exec.pay
 mypar(1,2)
 hist(exec.pay) 
 qqnorm(exec.pay)
@@ -172,7 +172,7 @@ well approximated by the normal distribution. This summary, however,
 fails to describe an important characteristic of the data. 
 
 ```{r scatterplot, fig.cap="Heights of father and son pairs plotted against each other."}
-data(father.son,package="UsingR")
+father.son <- UsingR::father.son
 x=father.son$fheight
 y=father.son$sheight
 plot(x,y, xlab="Father's height in inches", 
